* 2014-08-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 33748: Don't attempt to read more bytes from the buffer than available 

* 2014-08-24 - thorben.betten@open-xchange.com

 - Fix for bug 33979: Restored libraries in c.o.subscribe.crawler bundle to maintain package compatibility

* 2014-08-20 - martin.herfurth@open-xchange.com

 - Fix for bug 33821: Avoid duplicate entries for participant tables.

* 2014-08-19 - tobias.friedrich@open-xchange.com

 - Fix for bug 34075: Don't take over the UID from the original contact when creating a copy

* 2014-08-18 - thorben.betten@open-xchange.com

 - Fix for bug 34071: Properly build up namespace section in IMAP folder tree

* 2014-08-14 - thorben.betten@open-xchange.com

 - Fix for bug 34035: Properly acquire message's source

* 2014-08-14 - martin.herfurth@open-xchange.com

 - Fix for bug 34041: Ignore additional elements in autoconfig xml.

* 2014-08-13 - martin.herfurth@open-xchange.com

 - Fix for bug 34023: Default display message for category user input.

* 2014-08-13 - tobias.friedrich@open-xchange.com

 - Fix for bug 34014: Adjusted example configuration to match corresponding comments

* 2014-08-12 - tobias.friedrich@open-xchange.com

 - Fix for bug 34006: Corrected hashCode() calculation for contacts

* 2014-08-08 - jan.bauerdick@open-xchange.com

 - Fix for bug 33818: Added update task to check foreign keys and drop them if necessary

* 2014-08-08 - thorben.betten@open-xchange.com

 - Fix for bug 33899: Added missing project dependencies to "com.openexchange.report.client" classpath
 - Fix for bug 33772: Added <strike> tag to whitelist.properties file
 - Fix for bug 33941: Added appropriate entries for password settings to "paths.perfMap" file
 - Fix for bug 33044: Properly decode (encoded and folded) Subject header

* 2014-08-08 - martin.herfurth@open-xchange.com

 - Fix for bug 30599: Ical export stumbles over bad reccurring appointment.

* 2014-08-08 - tobias.friedrich@open-xchange.com
