@@ -97,4 +97,13 @@ public class QuotedInternetAddressTest extends TestCase {
         assertEquals("Unexpected unicode form", "Foo \u00e0 Bar <foo@bar.info>", parsed[1].toUnicodeString());
     }
 
+    public void testBug34070() throws Exception {
+        String s = "=?windows-1252?Q?Betz=2C_C=E4cilia?= <caecilia.betz@invalid.org>";
+        QuotedInternetAddress addr = new QuotedInternetAddress(s);
+
+        assertEquals("Display name does not match \"Betz, Cäcilia\"", "Betz, C\u00e4cilia", addr.getPersonal());
+        assertEquals("Address does not match \"caecilia.betz@open-xchange.com\"", "caecilia.betz@invalid.org", addr.getAddress());
+
+    }
+
 }
